--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: savannah million
 description: > # this means to ignore newlines until "baseurl:"
   Product designer. Windy city, sunny disposition.
 baseurl: "/nnah.rocks/" # the subpath of your site, e.g. /blog/
-url: "http://sava.nnah.rocks" # the base hostname & protocol for your site
+url: "http://savannahmillion.github.io/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
