--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ email: sav@nnah.rocks
 author: savannah million
 description: > # this means to ignore newlines until "baseurl:"
   Product designer. Windy city, sunny disposition.
-baseurl: "/nnah.rocks/" # the subpath of your site, e.g. /blog/
-url: "http://savannahmillion.github.io/" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://www.nnah.rocks/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
